# kick

./: Cargo.toml  Readme.md
examples/cpp/: CMakeLists.txt  config.toml
examples/cpp/src/: main.cpp
src/: config.rs  main.rs  utils.rs
src/cli/: cmd.rs  help.rs  list.rs  mod.rs  new.rs
