[package]
name = "kick"
version = "0.0.1"
edition = "2024"

[dependencies]
dirs = "6.0.0"
minijinja = "2.10.2"
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"

[[bin]]
name="kick"
path="src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
panic = 'abort'
